--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/hciDB?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+spring.datasource.name = hci Ds
+spring.datasource.username = root
+spring.datasource.password =
+
+mybatis.mapperLocations = classpath*:mappers/*.xml
+mybatis.configuration.mapUnderscoreToCamelCase = true
